--- a/caoportado.html
+++ b/caoportado.html
@@ -33,7 +33,7 @@
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
         </p>
         <div class="u-clearfix u-custom-html u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_Flzn4yX6PhW3YJ7z" style="width: 100%; position:relative; padding-top: 56.25%;"></div>
+          <div id="vidalytics_embed_Flzn4yX6PhW3YJ7z" style="width: 100%; position:relative; border: 3px solid #FEB908; padding-top: 56.25%;"></div>
           <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
     y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
     if (!vsl){vsl=function(u,cb){
@@ -44,15 +44,15 @@
     vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
 })(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
         </div>
+        <a href="https://metodocaointeligente.com" id= "pitchzera" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
       </div>
     </section>
     
     
     <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
-        <p class="u-align-center u-text u-text-grey-90 u-text-1">Todos os conteúdos e dados de acesso fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia será levada à medidas legais.<br>
+        <p class="u-align-center u-text u-text-grey-90 u-text-1">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
           <br>Para contato: contato@metodocaointeligente.com
         </p>
       </div></footer>
-  
 </body></html>
