--- a/caoportado/index.html
+++ b/caoportado/index.html
@@ -33,16 +33,18 @@
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
         </p>
         <div class="u-clearfix u-custom-html u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_Flzn4yX6PhW3YJ7z" style="width: 100%; position:relative; border: 3px solid #FEB908; padding-top: 56.25%;"></div>
-          <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
-    y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
-    if (!vsl){vsl=function(u,cb){
-        if(t){cb();return;}s=i.createElement("script");s.type="text/javascript";s.async=1;s.src=u;
-        if(s.readyState){s.onreadystatechange=function(){if(s.readyState==="loaded"||s.readyState=="complete"){s.onreadystatechange=null;vlf=1;cb();}};}else{s.onload=function(){vlf=1;cb();};}
-        i.getElementsByTagName("head")[0].appendChild(s);
-    };}
-    vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
-})(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
+          <div id="vidalytics_embed_dC7Idm_pMl3gxCBe" style="width: 100%; position:relative; border: 3px solid #FEB908; padding-top: 56.25%;"></div>
+          <script type="text/javascript">
+          (function (v, i, d, a, l, y, t, c, s) {
+              y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
+              if (!vsl){vsl=function(u,cb){
+                  if(t){cb();return;}s=i.createElement("script");s.type="text/javascript";s.async=1;s.src=u;
+                  if(s.readyState){s.onreadystatechange=function(){if(s.readyState==="loaded"||s.readyState=="complete"){s.onreadystatechange=null;vlf=1;cb();}};}else{s.onload=function(){vlf=1;cb();};}
+                  i.getElementsByTagName("head")[0].appendChild(s);
+              };}
+              vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
+          })(window, document, 'Vidalytics', 'vidalytics_embed_dC7Idm_pMl3gxCBe', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/dC7Idm_pMl3gxCBe/');
+          </script>
         </div>
         <a href="https://metodocaointeligente.com" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
       </div>
