--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta name="robots" content="noindex">
     <title>caoportado</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="index.css" media="screen">
+    <link rel="stylesheet" href="../nicepage.css" media="screen">
+    <link rel="stylesheet" href="../caoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -27,22 +27,24 @@
   <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-custom-color-5 u-text-1">O Incrível "Segredo" Presente na Mente dos Cães que Transformam <span style="text-decoration: underline !important;">Cães Desobedientes em Cães Super Comportados</span> em Poucos Minutos por Dia!
         </p>
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
         </p>
         <div class="u-clearfix u-custom-html u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_Flzn4yX6PhW3YJ7z" style="width: 100%; position:relative; border: 3px solid #FEB908; padding-top: 56.25%;"></div>
-          <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
-    y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
-    if (!vsl){vsl=function(u,cb){
-        if(t){cb();return;}s=i.createElement("script");s.type="text/javascript";s.async=1;s.src=u;
-        if(s.readyState){s.onreadystatechange=function(){if(s.readyState==="loaded"||s.readyState=="complete"){s.onreadystatechange=null;vlf=1;cb();}};}else{s.onload=function(){vlf=1;cb();};}
-        i.getElementsByTagName("head")[0].appendChild(s);
-    };}
-    vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
-})(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
+          <div id="vidalytics_embed_dC7Idm_pMl3gxCBe" style="width: 100%; position:relative; border: 3px solid #FEB908; padding-top: 56.25%;"></div>
+          <script type="text/javascript">
+          (function (v, i, d, a, l, y, t, c, s) {
+              y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
+              if (!vsl){vsl=function(u,cb){
+                  if(t){cb();return;}s=i.createElement("script");s.type="text/javascript";s.async=1;s.src=u;
+                  if(s.readyState){s.onreadystatechange=function(){if(s.readyState==="loaded"||s.readyState=="complete"){s.onreadystatechange=null;vlf=1;cb();}};}else{s.onload=function(){vlf=1;cb();};}
+                  i.getElementsByTagName("head")[0].appendChild(s);
+              };}
+              vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
+          })(window, document, 'Vidalytics', 'vidalytics_embed_dC7Idm_pMl3gxCBe', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/dC7Idm_pMl3gxCBe/');
+          </script>
         </div>
         <a href="https://metodocaointeligente.com" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
       </div>
@@ -50,7 +52,7 @@
     
     
     <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-grey-90 u-text-1">
           <a class="u-active-none u-border-none u-button-link u-button-style u-hover-none u-none u-text-custom-color-5" href="/privacidade">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
             <br>
