--- a/index.html
+++ b/index.html
@@ -7,46 +7,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>pagina1</title>         
+        <title>index</title>         
         <link href="../css/index.css" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
         <link rel="icon" href="../_pginfo/favicon.png" type="image/png">
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-T5PN27S');</script>
-    <!-- End Google Tag Manager -->
-
+        <!-- End Google Tag Manager -->
     </head>     
     <body style="text-align: center;">
         <h1 style="text-align: center; font-family: 'Rubik', sans-serif; font-weight: 400; margin-top: 4rem; color: #00000;"><b>O INCRÍVEL <u style="color: #feb908;">&quot;SEGREDO&quot; DA COMUNICAÇÃO</u> DOS CÃES QUE TRANSFORMA CÃES DESOBEDIENTES EM CÃES SUPER COMPORTADOS EM POUCOS MINUTOS POR DIA</b></h1>
         <h2 style="text-align: center; font-family: 'Rubik', sans-serif; font-weight: 400; color: #00000;"><i>Como <b>donos de cães</b> estão aprendendo a se comunicar de <b>forma efetiva</b> e <b>transformando comportamentos</b> problemáticos em minutos por dia.</i></h2>
         <section id="section-video">
             <div style="position:relative;padding-top:56.25%;">
-                <iframe id="panda-3a72950d-1f01-4952-911e-f41dacbcf5da" src="https://player-vz-7d42aded-c49.tv.pandavideo.com.br/embed/?v=3a72950d-1f01-4952-911e-f41dacbcf5da" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen="true" width="100%" height="100%" fetchpriority="high">
-                    <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
-                    <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
-                </iframe>
+                <iframe id="panda-45d12cfb-2922-4950-bdcf-d790e55724a5" src="https://player-vz-7d42aded-c49.tv.pandavideo.com.br/embed/?v=45d12cfb-2922-4950-bdcf-d790e55724a5" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen="true" width="100%" height="100%" fetchpriority="high">
+</iframe>
             </div>
         </section>
         <section>
-            <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
-            <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
+            <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-45d12cfb-2922-4950-bdcf-d790e55724a5',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
+            <div id="dbcf2234-b21c-46b3-902e-870eab5f008c"></div>
         </section>
         <footer style="margin-top: 5rem; background-color: #feb908; text-align: left; font-family: 'Rubik', sans-serif; height: auto; display: flex; align-items: center; justify-content: center;">
             <p style="font-weight: 400; color: #ffffff; margin-left: 2rem; margin-right: 2rem; text-align: center; font-size: 12px;"> 
     Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. <br><br>A venda do Método Cãoportado só pode ser realizada através deste site. Qualquer outro site onde você encontre este programa é uma FALSIFICAÇÃO e vai contra as leis. Evite falsificações e recuse conteúdos ilegais ou pirateados. Não nos responsabilizamos por compras realizadas em outros sites.<br><br> <a href="https://metodocaointeligente.com/privacidade" style="color: #ffffff;">Política de privacidade</a> </p>
         </footer>
-        <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
-        <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5PN27S"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->  
-
+        <!-- Google Tag Manager (noscript) -->
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5PN27S" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+        <!-- End Google Tag Manager (noscript) -->         
     </body>     
 </html>
